--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@htmlacademy/editorconfig-cli": "1.x",
     "autoprefixer": "^9.5.1",
     "browser-sync": "^2.26.7",
+    "del": "^5.1.0",
     "gulp": "^4.0.2",
     "gulp-csso": "^4.0.1",
     "gulp-imagemin": "^7.0.0",
@@ -45,7 +46,5 @@
   "engines": {
     "node": "8.16"
   },
-  "dependencies": {
-    "del": "^5.1.0"
-  }
+  "dependencies": {}
 }
